# Test2-Tools-FFI-C

./: .gitignore  README.md  dist.ini
lib/Test2/Tools/FFI/: C.pm
maint/: build.pl
t/: 00_diag.t  01_use.t  test2_tools_ffi_c.t
t2w/: CMakeLists.txt  main.c  t2w.c  t2w.h
